# havenza

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  README.md  havenza.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
src/: Havenza.hs
src/Effects/: Project.hs
src/Model/: Types.hs
src/View/: Page.hs
