cabal-version:       2.4
name:                havenza
version:             0.0.0.0
synopsis:            A server for generating .avenzamaps documents from uploaded PDFs
description:         A server for generating .avenzamaps documents from uploaded PDFs
homepage:            https://github.com/axman6/havenza
bug-reports:         https://github.com/axman6/havenza/issues
license:             MIT
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex Mason <github@me.axman6.com>
copyright:           2020 Alex Mason
category:            Web, Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/axman6/havenza.git

common common-options
  build-depends:       base >= 4.10.1.0 && < 4.14
                      , servant-server
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Havenza
  build-depends:        servant
                      , servant-blaze
                      , servant-js
                      , servant-multipart
                      , text

executable havenza
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:        havenza
                      , warp
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite havenza-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       havenza
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
